// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columns 1`] = `
Array [
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": null,
    "defaultFunction": null,
    "name": "id",
    "nil": false,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": 8,
      "precision": null,
      "scale": null,
      "sqlType": "bigint(20)",
      "type": "integer",
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": "utf8_general_ci",
    "comment": Object {
      "comment": false,
    },
    "default": "untitled",
    "defaultFunction": null,
    "name": "name",
    "nil": true,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": "255",
      "precision": null,
      "scale": null,
      "sqlType": "varchar(255)",
      "type": null,
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": "utf8_general_ci",
    "comment": Object {
      "comment": false,
    },
    "default": null,
    "defaultFunction": null,
    "name": "email",
    "nil": true,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": "255",
      "precision": null,
      "scale": null,
      "sqlType": "varchar(255)",
      "type": null,
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": "0",
    "defaultFunction": null,
    "name": "age",
    "nil": true,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": "11",
      "precision": null,
      "scale": null,
      "sqlType": "int(11)",
      "type": "integer",
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": null,
    "defaultFunction": null,
    "name": "age2",
    "nil": true,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": "11",
      "precision": null,
      "scale": null,
      "sqlType": "int(11)",
      "type": "integer",
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": "1",
    "defaultFunction": null,
    "name": "active",
    "nil": true,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "tinyint(1)",
      "type": "boolean",
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": null,
    "defaultFunction": null,
    "name": "birthday",
    "nil": true,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "date",
      "type": "date",
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": null,
    "defaultFunction": null,
    "name": "last_active_at",
    "nil": true,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": "datetime",
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": null,
    "defaultFunction": null,
    "name": "created_at",
    "nil": false,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": "datetime",
    },
    "tableName": "users",
  },
  Mysql2Column {
    "collation": null,
    "comment": Object {
      "comment": false,
    },
    "default": null,
    "defaultFunction": null,
    "name": "updated_at",
    "nil": false,
    "sqlTypeMetaData": Mysql2SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": "datetime",
    },
    "tableName": "users",
  },
]
`;

exports[`from 1`] = `"SELECT name FROM posts"`;

exports[`group 1`] = `"SELECT \`users\`.* FROM \`users\` GROUP BY name"`;

exports[`joins string 1`] = `"SELECT \`users\`.* FROM \`users\` LEFT JOIN bookmarks ON bookmarks.user_id = users.id"`;

exports[`limit 1`] = `"SELECT  \`users\`.* FROM \`users\` LIMIT 1"`;

exports[`limit 2`] = `"SELECT  \`users\`.* FROM \`users\` WHERE \`users\`.\`name\` = 'test' LIMIT 1"`;

exports[`lookupCastType 1`] = `
Boolean {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`new 1`] = `
Object {
  "active": FromDatabase {
    "name": "active",
    "originalAttribute": Object {},
    "type": Boolean {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "1",
  },
  "age": FromDatabase {
    "_value": 0,
    "name": "age",
    "originalAttribute": Object {},
    "type": Integer {
      "limit": "11",
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "0",
  },
  "age2": FromDatabase {
    "name": "age2",
    "originalAttribute": Object {},
    "type": Integer {
      "limit": "11",
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "birthday": FromDatabase {
    "name": "birthday",
    "originalAttribute": Object {},
    "type": Date {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "created_at": FromDatabase {
    "name": "created_at",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "email": FromUser {
    "_value": "new@example.com",
    "name": "email",
    "originalAttribute": Object {},
    "type": String {
      "limit": "255",
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "new@example.com",
  },
  "id": FromDatabase {
    "name": "id",
    "originalAttribute": Object {},
    "type": Integer {
      "limit": 8,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "last_active_at": FromDatabase {
    "name": "last_active_at",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "name": FromUser {
    "_value": "new",
    "name": "name",
    "originalAttribute": Object {},
    "type": String {
      "limit": "255",
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "new",
  },
  "updated_at": FromDatabase {
    "name": "updated_at",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
}
`;

exports[`new 2`] = `
Object {
  "active": true,
  "age": 0,
  "age2": undefined,
  "birthday": undefined,
  "created_at": undefined,
  "email": "new@example.com",
  "id": undefined,
  "last_active_at": undefined,
  "name": "new",
  "updated_at": undefined,
}
`;

exports[`offset 1`] = `"SELECT \`users\`.* FROM \`users\` ORDER BY name ASC OFFSET 10"`;

exports[`order 1`] = `"SELECT \`users\`.* FROM \`users\` ORDER BY \`users\`.\`name\` ASC"`;

exports[`order 2`] = `"SELECT \`users\`.* FROM \`users\` ORDER BY \`users\`.\`email\` DESC"`;

exports[`order 3`] = `"SELECT \`users\`.* FROM \`users\` ORDER BY \`users\`.\`name\` ASC, \`users\`.\`email\` DESC"`;

exports[`order 4`] = `"SELECT \`users\`.* FROM \`users\` ORDER BY name"`;

exports[`order 5`] = `"SELECT \`users\`.* FROM \`users\` ORDER BY name DESC"`;

exports[`order 6`] = `"SELECT \`users\`.* FROM \`users\` ORDER BY name DESC, email"`;

exports[`select 1`] = `"SELECT \`users\`.\`name\`, \`users\`.\`email\`, email as user_email FROM \`users\`"`;

exports[`table.type 1`] = `
String {
  "limit": "255",
  "precision": null,
  "scale": null,
}
`;

exports[`table.type 2`] = `
String {
  "limit": "255",
  "precision": null,
  "scale": null,
}
`;

exports[`tables 1`] = `
Array [
  "posts",
  "users",
]
`;

exports[`typeToSql 1`] = `"bigint auto_increment PRIMARY KEY"`;

exports[`typeToSql 2`] = `"varchar(255)"`;

exports[`typeToSql 3`] = `"text"`;

exports[`typeToSql 4`] = `"int"`;

exports[`typeToSql 5`] = `"bigint"`;

exports[`typeToSql 6`] = `"float"`;

exports[`typeToSql 7`] = `"decimal"`;

exports[`typeToSql 8`] = `"numeric"`;

exports[`typeToSql 9`] = `"datetime"`;

exports[`typeToSql 10`] = `"time"`;

exports[`typeToSql 11`] = `"date"`;

exports[`typeToSql 12`] = `"blob"`;

exports[`typeToSql 13`] = `"tinyint(1)"`;

exports[`where 1`] = `"SELECT \`users\`.* FROM \`users\`"`;

exports[`where 2`] = `"SELECT \`users\`.* FROM \`users\` WHERE \`users\`.\`name\` = 'test'"`;

exports[`where 3`] = `"SELECT \`users\`.* FROM \`users\` WHERE \`users\`.\`name\` = 'test' AND \`users\`.\`email\` = 'test@example.com'"`;

exports[`where 4`] = `"SELECT \`users\`.* FROM \`users\` WHERE \`users\`.\`name\` = 'test' AND \`users\`.\`email\` = 'test@example.com'"`;

exports[`where 5`] = `"SELECT \`users\`.* FROM \`users\` WHERE (name = 'test') AND (age = 10)"`;

exports[`where 6`] = `"SELECT \`users\`.* FROM \`users\` WHERE (id = 1)"`;
